# SolanaWalletAdapter-zos

./: .gitignore  Cargo.toml  Error-Codes.md  Makefile.toml  README.md  deny.toml  package-lock.json
.devcontainer/: devcontainer.json  mold.sh  node-packages.sh  rust-packages.sh  system-packages.sh
.github/workflows/: docsrs.yml  pages.yml  parser.yml  rust.yml
crate/: Cargo.toml
crate/.cargo/: config.toml
crate/src/: adapter.rs  chains.rs  commitment.rs  constants.rs  errors.rs  events.rs  lib.rs  register.rs  sign_in.rs  storage.rs  utils.rs  wallet.rs  wallet_account.rs  window_ops.rs
crate/src/wallet/: chains.rs  features.rs  mod.rs  version.rs  wallet.rs  wallet_account.rs  wallet_icon.rs
crate/src/wallet/features/: connect.rs  disconnect.rs  events.rs  features.rs  mod.rs  sign_message.rs  sign_tx.rs  signin.rs  standard_fn.rs
crate/src/wallet/signin_input_output/: input.rs  output.rs
crate/src/wallet/signin_standard/: input.rs  output.rs
crate/src/wallet_ser_der/: chains.rs  mod.rs  version.rs  wallet.rs  wallet_account.rs  wallet_icon.rs
crate/src/wallet_ser_der/signin_standard/: input.rs  output.rs
crate/src/wallet_ser_der/standard_features/: connect.rs  disconnect.rs  events.rs  features.rs  mod.rs  sign_message.rs  sign_tx.rs  signin.rs  standard_fn.rs
examples/dioxus-adapter/: .gitignore  Cargo.toml  Dioxus.toml
examples/dioxus-adapter/assets/: main.css
examples/dioxus-adapter/src/: header.rs  main.rs  sign_and_send_tx.rs  sign_message.rs  sign_tx.rs  signin.rs
examples/dioxus-adapter/src/views/: dashboard_disconnected.rs  footer.rs  mod.rs
examples/simple/: Cargo.toml  Makefile.toml
examples/simple/resources/: index.html
examples/simple/resources/styles/: main.css
examples/simple/src/: lib.rs  wallet.rs
examples/sycamore-adapter/: Cargo.toml
examples/sycamore-adapter/resources/: index.html
examples/sycamore-adapter/resources/styles/: main.css  solana.css
examples/sycamore-adapter/src/: footer.rs  header.rs  homepage.rs  lib.rs  sign_and_send_tx.rs  sign_message.rs  sign_tx.rs  signin.rs
examples/yew-adapter/: Cargo.toml  LICENSE-MIT  README.md
examples/yew-adapter/resources/: index.html
examples/yew-adapter/resources/styles/: main.css  solana.css
examples/yew-adapter/src/: app.rs  lib.rs  sign_and_send_tx.rs  sign_message.rs  sign_tx.rs  signin.rs
examples/yew-adapter/src/components/: footer.rs  header.rs  mod.rs
examples/yew-adapter/src/views/: dashboard.rs  mod.rs  sign_and_send_tx.rs  sign_message.rs  sign_tx.rs  signin.rs
partial-idl-parser/: Cargo.toml  README.md
partial-idl-parser/src/: lib.rs  parser.rs  path_macro.rs
resources/: index.html
src/: chains.rs  errors.rs  lib.rs  provider_methods.rs  start.rs  window_ops.rs
templates/: README.md
templates/dioxus-adapter/: Cargo.toml  README.md  cargo-generate.toml
templates/dioxus-adapter-anchor/: README.md
templates/dioxus-adapter-anchor/frontend/: Cargo.toml  Dioxus.toml
templates/dioxus-adapter-anchor/frontend/src/: fetch_util.rs  header.rs
templates/dioxus-adapter-anchor/programs/{{project-name}}-program/: Cargo.toml
templates/dioxus-adapter-anchor/programs/{{project-name}}-program/src/: lib.rs
templates/dioxus-adapter/assets/: tailwind.css
templates/dioxus-adapter/src/: dioxus_adapter.rs  fetch_parser.rs  fetch_util.rs  header.rs  svg_assets.rs  utils.rs
templates/dioxus-adapter/src/views/: accounts.rs  airdrop.rs  connect_first.rs  footer.rs
templates/dioxus-adapter/src/views/extras_views/: sign_message.rs
templates/sycamore-adapter/: Cargo.toml  README.md
templates/sycamore-adapter-anchor/: Anchor.toml  README.md  package-lock.json
templates/sycamore-adapter-anchor/frontend/: Cargo.toml  tailwind.css
templates/sycamore-adapter-anchor/frontend/src/: fetch_parser.rs  fetch_util.rs  header.rs  main.rs  svg_assets.rs  types.rs
templates/sycamore-adapter-anchor/frontend/src/views/: accounts.rs  clusters.rs  connect_first.rs  footer.rs
templates/sycamore-adapter-anchor/frontend/src/views/extras_views/: sign_tx.rs
templates/sycamore-adapter-anchor/tests/: Cargo.toml
templates/sycamore-adapter-anchor/tests/src/: test_initialize.rs
templates/sycamore-adapter/assets/: index.html
templates/sycamore-adapter/src/: app.rs  fetch_parser.rs  fetch_util.rs  header.rs  main.rs  utils.rs
templates/sycamore-adapter/src/views/: airdrop.rs  clusters.rs  dashboard.rs  extras.rs  footer.rs  receive_sol.rs  send_sol.rs
templates/sycamore-adapter/src/views/extras_views/: sign_message.rs  sign_tx.rs  siws.rs
templates/yew-adapter/: Cargo.toml  README.md
templates/yew-adapter-anchor/: README.md  package-lock.json  package.json
templates/yew-adapter-anchor/frontend/: .gitignore  Cargo.toml  index.html
templates/yew-adapter-anchor/frontend/src/: app.rs  main.rs  svg_assets.rs
templates/yew-adapter-anchor/frontend/src/components/: header.rs
templates/yew-adapter-anchor/frontend/src/utils/: app_state.rs  tx.rs  (+2 more)
templates/yew-adapter-anchor/programs/{{project-name}}-program/: Cargo.toml
templates/yew-adapter-anchor/tests/: Cargo.toml
templates/yew-adapter/.cargo/: config.toml
templates/yew-adapter/src/: main.rs  types.rs
templates/yew-adapter/src/components/: footer.rs  mod.rs
templates/yew-adapter/src/utils/: app_state.rs  cluster_store.rs  fetch.rs  formatting.rs  html.rs  mod.rs  tx.rs  types.rs
templates/yew-adapter/src/views/: airdrop.rs  clusters.rs  dashboard.rs  mod.rs  receive.rs  send_sol.rs
templates/yew-adapter/src/views/extras/: mod.rs  sign_tx.rs
wallet-adapter-book/: book.toml
wallet-adapter-book/src/: SUMMARY.md  chapter_1.md  introduction.md
wallet-adapter-book/src/templates/: account-state.md  active-connection.md  cluster-network-state.md  cluster-storage.md  message-storage.md  templates-introduction.md  wallet-adapter.md
wallet-adapter-book/src/wallet-adapter/: connection-info.md  error-handling.md  wallet-account.md  wallet-adapter-intro.md  wallet-adapter-struct.md  wallet-events.md  wallet-storage.md  wallet.md
wallet-adapter-book/theme/css/: chrome.css  variables.css
(+7 files in other folders)
