[workspace]
members = ["crate", "examples/simple"]

resolver = "2"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
description = "Solana Wallet Adapter for Rust clients written in pure Rust"
homepage = "https://github.com/JamiiDao"
repository = "https://github.com/JamiiDao/SolanaWalletAdapter"
readme = "./README.md"

[workspace.dependencies]
bs58 = { version = "0.5.1" }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.45"
log = "0.4.14"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
async-channel = { version = "2.3.1", default-features = false }
jzon = "0.12.5"
js-sys = "0.3.70"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
