[workspace]
members = ["crate", "examples/*"]

resolver = "2"

[workspace.package]
authors = ["448-OG <superuser@448.africa>"]
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
description = "Solana Wallet Adapter for Rust clients written in pure Rust"
homepage = "https://github.com/JamiiDao"
repository = "https://github.com/JamiiDao/SolanaWalletAdapter"
readme = "./README.md"

[workspace.dependencies]
wallet-adapter = { path = "./crate" }
bs58 = { version = "0.5.1" }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.46"
log = "0.4.14"
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
js-sys = "0.3.73"
web-sys = { version = "0.3.73", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
