[workspace]
members = ["crate", "partial-idl-parser"]
resolver = "2"

[workspace.package]
version = "1.1.2"
authors = ["448-OG <superuser@448.africa>"]
description = "Solana Wallet Adapter for Rust clients written in pure Rust"
homepage = "https://github.com/JamiiDao"
readme = "./README.md"
keywords = ["solana", "solana-pay", "wallet", "blockchain", "wallet-adapter"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/JamiiDao/SolanaWalletAdapter"
edition = "2021"
rust-version = "1.84"

[workspace.dependencies]
async-channel = "2.3.1"
log = "0.4.27"
wasm-bindgen-futures = "0.4.50"

[workspace.dependencies.bs58]
version = "0.5.1"

[workspace.dependencies.wallet-adapter]
path = "./crate"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
    "HtmlLabelElement",
    "CssStyleDeclaration",
]

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "s"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"
