[package]
name = "wallet-adapter"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
thiserror = "2.0.3"
wasm-bindgen-futures.workspace = true
humantime = "2.1.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand_chacha = "0.3.1"
getrandom = { version = "0.2.15", features = ["js"] }
bs58.workspace = true
blake3 = { version = "1.5.1", default-features = false }
ed25519-dalek = { version = "1", default-features = false, features = [
    "u64_backend",
] }
