[package]
name = "partial-idl-parser"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A simple parser for anchor IDL without importing anchor types or causing build panics for WASM targets."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
