[package]
name = "partial-idl-parser"
authors.workspace = true
version = "1.2.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A simple parser for anchor IDL without importing anchor types or causing build panics for WASM targets."
homepage.workspace = true
repository.workspace = true
readme = "./README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
