[package]
name = "dioxus-adapter"
version = "0.1.0"
authors = ["448 OG <superuser@448.africa>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["web"] }

wallet-adapter.workspace = true
web-sys.workspace = true
wasm-bindgen-futures.workspace = true

# Debug
dioxus-logger = "0.5.1"
tracing = "0.1.40"
solana-sdk = "2.1.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
