[package]
name = "adapter-example"
edition.workspace = true

[lib]
name = "adapter_example"
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58.workspace = true
wasm-bindgen-futures.workspace = true
wallet-adapter = { path = "../../crate" }
log.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde = { workspace = true, features = ["derive"] }
web-sys.workspace = true
gloo-utils = { version = "0.2.0", features = ["serde"] }
