[package]
name = "adapter-example"
edition.workspace = true
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "adapter_example"
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58.workspace = true
wasm-bindgen-futures.workspace = true
wallet-adapter = { path = "../../crate" }
wasm-bindgen.workspace = true
web-sys.workspace = true
