[package]
name = "sycamore-adapter"
edition.workspace = true
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "sycamore_adapter"
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = { version = "0.9.1" }
bs58.workspace = true
wasm-bindgen-futures.workspace = true
wallet-adapter = { path = "../../crate" }
wasm-bindgen.workspace = true
web-sys.workspace = true
solana-sdk = "2.1.2"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
