[package]
name = "sycamore-adapter"
edition.workspace = true
version = "0.2.0"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "sycamore_adapter"
crate-type = ["cdylib", "rlib"]

[dependencies]
sycamore = { version = "0.9.1", features = ["futures", "suspense"] }
bs58.workspace = true
wallet-adapter = { path = "../../crate" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
solana-sdk = "2.1.2"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
sycamore-router = "0.9.1"
