[package]
name = "yew-adapter"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wallet-adapter.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
once_cell = "1.20.2"
blake3 = { version = "1.5.5", default-features = false }
solana-sdk = "2.1.4"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"
jzon = "0.12.5"
