[package]
name = "{{project-name}}"
version = "1.0.0"
authors = ["{{authors}}"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }

solana-sdk = "2.1.2"
bincode = "1.3.3"
jzon = "0.12.5"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
gloo-timers = "0.3.0"
solana-transaction-error = { version = "2.1.13", features = ["serde"] }
qrcodegen = "1.8.0"
percent-encoding = "2.3.1"
fastrand = "2.3.0"
wallet-adapter = "1.0.0"
wasm-bindgen-futures = "0.4.7"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
    "HtmlLabelElement",
    "CssStyleDeclaration",
] }


[features]
default = ["web"]
web = ["dioxus/web"]
