[package]
name = "yew-adapter"
edition.workspace = true
version = "0.2.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-lock = "3.4.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
constcat = "0.6.0"
data-encoding = "2.8.0"
fastrand = "2.3.0"
gloo-timers = "0.3.0"
jzon = "0.12.5"
once_cell = "1.20.3"
percent-encoding = "2.3.1"
qrcodegen = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-sdk = "2.2.1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wallet-adapter.workspace = true
wasm-bindgen = "0.2.100"
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "HtmlSelectElement",
    "HtmlInputElement",
] }
