[package]
name = "{{project-name}}"
edition = "2021"
version = "0.2.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-lock = "3.4.0"
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
constcat = "0.6.0"
data-encoding = "2.8.0"
fastrand = "2.3.0"
gloo-timers = "0.3.0"
jzon = "0.12.5"
once_cell = "1.20.3"
percent-encoding = "2.3.1"
qrcodegen = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-sdk = "2.2.1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
wallet-adapter = "1.0.0"
wasm-bindgen-futures = "0.4.7"
web-sys = { version = "0.3.76", features = [
    "Window",
    "Document",
    "Event",
    "EventTarget",
    "CustomEvent",
    "CustomEventInit",
    "Element",
    "HtmlElement",
    "Location",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "PointerEvent",
    "Clipboard",
    "Navigator",
    "console",
    "HtmlLabelElement",
    "CssStyleDeclaration",
    "HtmlSelectElement",
    "HtmlInputElement",
] }
