[package]
name = "{{project-name}}"
edition = "2021"
version = "1.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
async-lock = "3.4.0"
bincode = "1.3.3"
constcat = "0.6.0"
data-encoding = "2.8.0"
fastrand = "2.3.0"
gloo-timers = "0.3.0"
jzon = "0.12.5"
percent-encoding = "2.3.1"
qrcodegen = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-sdk = "2.2.1"
wallet-adapter = "1.1.0"
web-sys = { version = "0.3.76", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
] }
