[package]
name = "{{project-name}}"
edition = "2021"
version = "0.2.0"
authors = ["{{authors}}"]


[dependencies]
async-lock = "3.4.0"
bincode = "1.3.3"
constcat = "0.6.0"
data-encoding = "2.8.0"
fastrand = "2.3.0"
gloo-timers = "0.3.0"
jzon = "0.12.5"
percent-encoding = "2.3.1"
qrcodegen = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
solana-sdk = "2.2.1"
wallet-adapter = "1.0.0"
web-sys = { version = "0.3.76", features = [
    "HtmlSelectElement",
    "HtmlInputElement",
] }

sycamore = { version = "0.9.1", features = ["futures", "suspense"] }
sycamore-router = "0.9.1"
partial-idl-parser = "1.2.0"
